--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "json-server": "json-server --watch data/data.json --port 3001",
     "test-e2e": "cp ./data.empty.json data/data.json && npx playwright test && cp ./data.empty.json data/data.jsont",
     "test-e2e-ui": "cp ./data.empty.json data/data.json && npx playwright test --ui && cp ./data.empty.json data/data.json",
-    "test": "cp ./data.test.json data/data.json && jest ./__tests__/integration/api.spec.ts && cp ./data.empty.json data/data.json"
+    "test": "npm run test-v1 && npm run test-v2",
+    "test-v1": "cp ./data.test.json data/data.json && jest ./__tests__/integration/api.spec.ts && cp ./data.empty.json data/data.json",
+    "test-v2": "cp ./data.test.v2.json data/data.json && jest ./__tests__/integration/api.v2.spec.ts && cp ./data.empty.json data/data.json"
   },
   "dependencies": {
     "@types/node": "18.15.11",
